# py-projects

./: .gitignore
task-mgr-fastapi/: .env  README.md  alembic.ini  db.py  main.py  models.py  pyproject.toml  schemas.py  services.py
task-mgr-fastapi/migrations/: env.py
task-mgr-fastapi/migrations/versions/: 50231beff0de_adding_author_category_table.py  76e21236e0af_add_publisher_to_book.py  856e0eb9cff6_ini_migration.py  df718bf56c29_adding_default_value.py
