[project]
name = "task-mgr-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "python-dotenv>=1.1.1",
]
